# nodec_rendering

./: CMakeLists.txt
include/nodec_rendering/components/: image_renderer.hpp  text_renderer.hpp  transparent.hpp
include/nodec_rendering/resources/: material.hpp
serialization/nodec_rendering/serialization/components/: camera.hpp  directional_light.hpp  image_renderer.hpp  mesh_renderer.hpp  non_visible.hpp  point_light.hpp  post_processing.hpp  scene_lighting.hpp  text_renderer.hpp
serialization/nodec_rendering/serialization/resources/: material.hpp  mesh.hpp  shader.hpp
